--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "transliterate"
 version = "0.1.0"
 authors = ["storyfeet <thebeaky@psmail.net>"]
 edition = "2018"
+keywords = ["parser","combinator","string"]
+license = "MIT"
+readme = "readme.md"
+description = "A string to string parser which avoids the intermediate tree by building the output string directly"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bogobble = {path="../bogobble/"}
+bogobble = "0.1.1"
